@@ -406,8 +406,8 @@ static int on_frame_recv_cb(nghttp2_session *ng2s,
                 /* A stream reset on a request it sent us. Could happen in a browser
                  * when the user navigates away or cancels loading - maybe. */
                 h2_mplx_c1_client_rst(session->mplx, frame->hd.stream_id);
-                ++session->streams_reset;
             }
+            ++session->streams_reset;
             break;
         case NGHTTP2_GOAWAY:
             if (frame->goaway.error_code == 0 
@@ -692,17 +692,20 @@ static void update_child_status(h2_session *session, int status,
      * avoid updating the scoreboard in between */
     if (session->last_status_code != status
         || session->last_status_msg != msg) {
+        char sbuffer[1024];
+        sbuffer[0] = '\0';
+        if (stream) {
+            apr_snprintf(sbuffer, sizeof(sbuffer),
+                         ": stream %d, %s %s",
+                         stream->id,
+                         stream->request? stream->request->method : "",
+                         stream->request? stream->request->path : "");
+        }
         apr_snprintf(session->status, sizeof(session->status),
-                     "[%d/%d/%d/%d] %s%s%s %s",
-                     (int)session->remote.emitted_count,
-                     (int)session->responses_submitted,
-                     (int)session->pushes_submitted,
-                     (int)session->pushes_reset + session->streams_reset,
-                     msg? msg : "-",
-                     stream? ": " : "",
-                     stream? stream->request->method : "",
-                     stream && stream->request->path? stream->request->path : ""
-                     );
+                     "[%d/%d] %s%s",
+                     (int)(session->remote.emitted_count + session->pushes_submitted),
+                     (int)session->streams_done,
+                     msg? msg : "-", sbuffer);
         ap_update_child_status_from_server(session->c1->sbh, status,
                                            session->c1, session->s);
         ap_update_child_status_descr(session->c1->sbh, status, session->status);
@@ -738,10 +741,13 @@ static apr_status_t h2_session_shutdown(h2_session *session, int error,
     if (session->local.shutdown) {
         return APR_SUCCESS;
     }
-    if (!msg && error) {
-        msg = nghttp2_strerror(error);
+
+    if (error && !msg) {
+        if (APR_STATUS_IS_EPIPE(error)) {
+            msg = "remote close";
+        }
     }
-    
+
     if (error || force_close) {
         /* not a graceful shutdown, we want to leave... 
          * Do not start further streams that are waiting to be scheduled. 
@@ -752,6 +758,7 @@ static apr_status_t h2_session_shutdown(h2_session *session, int error,
          * we send. */
         session->local.accepted_max = h2_mplx_c1_shutdown(session->mplx);
         session->local.error = error;
+        session->local.error_msg = msg;
     }
     else {
         /* graceful shutdown. we will continue processing all streams
@@ -1244,8 +1251,7 @@ static apr_status_t h2_session_send(h2_session *session)
     }
 cleanup:
     if (rv != APR_SUCCESS) {
-        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR,
-                       H2_ERR_INTERNAL_ERROR, "c1 out writing");
+        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, rv, NULL);
     }
     return rv;
 }
@@ -1264,7 +1270,6 @@ static apr_status_t on_stream_input(void *ctx, h2_stream *stream)
 
     if (stream->id == 0) {
         /* input on primary connection available? read */
-        update_child_status(session, SERVER_BUSY_READ, "read", NULL);
         rv = h2_c1_read(session);
     }
     else {
@@ -1275,8 +1280,10 @@ static apr_status_t on_stream_input(void *ctx, h2_stream *stream)
                           H2_STRM_LOG(APLOGNO(10026), stream, "remote close missing"));
             nghttp2_submit_rst_stream(stream->session->ngh2, NGHTTP2_FLAG_NONE,
                                       stream->id, NGHTTP2_NO_ERROR);
+            update_child_status(session, SERVER_BUSY_WRITE, "reset", stream);
             goto cleanup;
         }
+        update_child_status(session, SERVER_BUSY_READ, "read", stream);
         h2_beam_report_consumption(stream->input);
         if (stream->state == H2_SS_CLOSED_R) {
             /* TODO: remove this stream from input polling */
@@ -1330,8 +1337,7 @@ static void transit(h2_session *session, const char *action, h2_session_state ns
 
     if (session->state != nstate) {
         ostate = session->state;
-        session->state = nstate;
-        
+
         ap_log_cerror(APLOG_MARK, APLOG_DEBUG, 0, session->c1,
                       H2_SSSN_LOG(APLOGNO(03078), session, 
                       "transit [%s] -- %s --> [%s]"), 
@@ -1355,11 +1361,13 @@ static void transit(h2_session *session, const char *action, h2_session_state ns
                     ap_log_cerror(APLOG_MARK, APLOG_TRACE1, 0, session->c1,
                                   H2_SSSN_LOG("", session, "enter keepalive"));
                 }
+                session->state = nstate;
                 break;
             case H2_SESSION_ST_DONE:
                 break;
             default:
                 /* nop */
+                session->state = nstate;
                 break;
         }
     }
@@ -1550,7 +1558,7 @@ static void ev_stream_open(h2_session *session, h2_stream *stream)
     /* Stream state OPEN means we have received all request headers
      * and can start processing the stream. */
     h2_iq_append(session->ready_to_process, stream->id);
-    update_child_status(session, SERVER_BUSY_READ, "process", stream);
+    update_child_status(session, SERVER_BUSY_READ, "schedule", stream);
 }
 
 static void ev_stream_closed(h2_session *session, h2_stream *stream)
@@ -1610,6 +1618,8 @@ static void on_stream_state_enter(void *ctx, h2_stream *stream)
         case H2_SS_CLEANUP:
             nghttp2_session_set_stream_user_data(session->ngh2, stream->id, NULL);
             h2_mplx_c1_stream_cleanup(session->mplx, stream, &session->open_streams);
+            ++session->streams_done;
+            update_child_status(session, SERVER_BUSY_WRITE, "done", stream);
             if (session->open_streams == 0) {
                 h2_session_dispatch_event(session, H2_SESSION_EV_NO_MORE_STREAMS,
                                           0, "stream done");
@@ -1654,7 +1664,7 @@ static void on_stream_state_event(void *ctx, h2_stream *stream,
 }
 
 void h2_session_dispatch_event(h2_session *session, h2_session_event_t ev,
-                               int arg, const char *msg)
+                               apr_status_t arg, const char *msg)
 {
     switch (ev) {
         case H2_SESSION_EV_INIT:
@@ -1721,10 +1731,9 @@ apr_status_t h2_session_process(h2_session *session, int async)
 
     if (H2_SESSION_ST_INIT == session->state) {
         if (!h2_protocol_is_acceptable_c1(c, session->r, 1)) {
-            update_child_status(session, SERVER_BUSY_READ,
-                                "inadequate security", NULL);
-            h2_session_shutdown(session,
-                                NGHTTP2_INADEQUATE_SECURITY, NULL, 1);
+            const char *msg = nghttp2_strerror(NGHTTP2_INADEQUATE_SECURITY);
+            update_child_status(session, SERVER_BUSY_READ, msg, NULL);
+            h2_session_shutdown(session, APR_EINVAL, msg, 1);
         }
         else {
             update_child_status(session, SERVER_BUSY_READ, "init", NULL);
@@ -1736,7 +1745,7 @@ apr_status_t h2_session_process(h2_session *session, int async)
                           c->local_addr->port);
             if (status != APR_SUCCESS) {
                 h2_session_dispatch_event(session,
-                               H2_SESSION_EV_CONN_ERROR, 0, NULL);
+                               H2_SESSION_EV_CONN_ERROR, status, NULL);
             }
             else {
                 h2_session_dispatch_event(session, H2_SESSION_EV_INIT, 0, NULL);
@@ -1790,7 +1799,7 @@ apr_status_t h2_session_process(h2_session *session, int async)
 
         status = h2_c1_io_assure_flushed(&session->io);
         if (APR_SUCCESS != status) {
-            h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, NULL);
+            h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, status, NULL);
         }
 
         switch (session->state) {
@@ -1803,32 +1812,16 @@ apr_status_t h2_session_process(h2_session *session, int async)
             ap_assert(session->open_streams == 0);
             ap_assert(nghttp2_session_want_read(session->ngh2));
             if (!h2_session_want_send(session)) {
-                if (async) {
-                    /* Give any new incoming request a short grace period to
-                     * arrive while we are still hot and return to the mpm
-                     * connection handling when nothing really happened. */
-                    h2_mplx_c1_poll(session->mplx, apr_time_from_msec(100),
-                                    on_stream_input, on_stream_output, session);
-                    if (H2_SESSION_ST_IDLE == session->state) {
-                        ap_log_cerror(APLOG_MARK, APLOG_DEBUG, status, c,
-                                      H2_SSSN_LOG(APLOGNO(10306), session,
-                                      "returning to mpm c1 monitoring"));
-                        goto leaving;
-                    }
-                }
-                else {
-                    /* non-async mpm, wait for new things in a keepalive
-                     * timeout. */
-                    status = h2_mplx_c1_poll(session->mplx, session->s->keep_alive_timeout,
-                                             on_stream_input, on_stream_output, session);
-                    if (APR_STATUS_IS_TIMEUP(status)) {
-                        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_TIMEOUT, 0, "timeout");
-                        break;
-                    }
-                    else if (APR_SUCCESS != status) {
-                        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, "error");
-                        break;
-                    }
+                /* Give any new incoming request a short grace period to
+                 * arrive while we are still hot and return to the mpm
+                 * connection handling when nothing really happened. */
+                h2_mplx_c1_poll(session->mplx, apr_time_from_msec(100),
+                                on_stream_input, on_stream_output, session);
+                if (H2_SESSION_ST_IDLE == session->state) {
+                    ap_log_cerror(APLOG_MARK, APLOG_DEBUG, status, c,
+                                  H2_SSSN_LOG(APLOGNO(10306), session,
+                                  "returning to mpm c1 monitoring"));
+                    goto leaving;
                 }
             }
             else {
@@ -1842,7 +1835,7 @@ apr_status_t h2_session_process(h2_session *session, int async)
             status = h2_mplx_c1_poll(session->mplx, 0,
                                      on_stream_input, on_stream_output, session);
             if (APR_SUCCESS != status && !APR_STATUS_IS_TIMEUP(status)) {
-                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, NULL);
+                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, status, NULL);
                 break;
             }
             h2_c1_read(session);
@@ -1851,7 +1844,7 @@ apr_status_t h2_session_process(h2_session *session, int async)
         case H2_SESSION_ST_WAIT:
             status = h2_c1_io_assure_flushed(&session->io);
             if (APR_SUCCESS != status) {
-                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, NULL);
+                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, status, NULL);
                 break;
             }
             /* No IO happening and input is exhausted. Make sure we have
@@ -1860,11 +1853,11 @@ apr_status_t h2_session_process(h2_session *session, int async)
             status = h2_mplx_c1_poll(session->mplx, session->s->timeout,
                                      on_stream_input, on_stream_output, session);
             if (APR_STATUS_IS_TIMEUP(status)) {
-                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_TIMEOUT, 0, "timeout");
+                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_TIMEOUT, status, NULL);
                 break;
             }
             else if (APR_SUCCESS != status) {
-                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, "error");
+                h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, status, NULL);
                 break;
             }
             break;
@@ -1877,7 +1870,7 @@ apr_status_t h2_session_process(h2_session *session, int async)
             ap_log_cerror(APLOG_MARK, APLOG_ERR, APR_EGENERAL, c,
                           H2_SSSN_LOG(APLOGNO(03080), session,
                           "unknown state"));
-            h2_session_dispatch_event(session, H2_SESSION_EV_PROTO_ERROR, 0, NULL);
+            h2_session_dispatch_event(session, H2_SESSION_EV_PROTO_ERROR, APR_EGENERAL, NULL);
             break;
         }
     }
@@ -1889,12 +1882,25 @@ leaving:
     }
     
     if (session->state == H2_SESSION_ST_DONE) {
-        /* nop */
+        if (session->local.error) {
+            char buffer[128];
+            const char *msg;
+            if (session->local.error_msg) {
+                msg = session->local.error_msg;
+            }
+            else {
+                msg = apr_strerror(session->local.error, buffer, sizeof(buffer));
+            }
+            update_child_status(session, SERVER_CLOSING, msg, NULL);
+        }
+        else {
+            update_child_status(session, SERVER_CLOSING, "done", NULL);
+        }
     }
     else if (APR_STATUS_IS_EOF(status)
             || APR_STATUS_IS_ECONNRESET(status) 
             || APR_STATUS_IS_ECONNABORTED(status)) {
-        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, 0, NULL);
+        h2_session_dispatch_event(session, H2_SESSION_EV_CONN_ERROR, status, NULL);
         update_child_status(session, SERVER_CLOSING, "error", NULL);
     }
 
